<resources>
    <string name="app_name">MyNotes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="type_note_here">Type note here</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_weblink">Add WebLink</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
</resources>