<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddUrlContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_dialog"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageAddURL"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_web"
        app:tint="@color/colorWhite"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:text="@string/add_weblink"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageAddURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageAddURL"
        app:layout_constraintTop_toTopOf="@+id/imageAddURL" />
    <EditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:textColor="@color/colorWhite"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintTop_toBottomOf="@id/imageAddURL"
        />

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/inputURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/inputURL"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>